# diridp

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  diridp.dist.yaml  flake.nix
.github/workflows/: check.yml  release.yml
extra/: diridp.service
nix/: README.md  nixosModule.nix  overlay.nix  package.nix
src/: config.rs  key_index.rs  log.rs  main.rs  state.rs  update_keys.rs  update_tokens.rs  util.rs
src/algs/: ecdsa.rs  es256.rs  mod.rs  ring_ecdsa.rs  ring_ed25519.rs  rsa.rs  rustcrypto_ecdsa.rs  rustcrypto_ed25519.rs
src/test/: mod.rs
src/test/helper/: main.js  package-lock.json  package.json
