[package]
name = "diridp"
version = "0.1.1"
license = "MIT"
description = "OIDC IdP that issues tokens as local files"
repository = "https://github.com/stephank/diridp"
edition = "2021"

[profile.release]
overflow-checks = true

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
digest = "0.10.3"
notify = "5.0.0-pre.15"
rand = "0.8.5"
rsa = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
sha2 = "0.10.2"

[dev-dependencies]
tempfile = "3.3.0"
