[package]
name = "diridp"
version = "0.2.0"
license = "MIT"
description = "OIDC IdP that issues tokens as local files"
repository = "https://github.com/stephank/diridp"
edition = "2021"

[features]
default = ["rsa", "ring"]
ring = ["pem-rfc7468", "dep:ring"]
rsa = ["digest", "dep:rsa", "sha2/oid", "signature"]
rustcrypto = ["digest", "ecdsa", "ed25519", "ed25519-dalek", "elliptic-curve", "k256", "p256", "p384", "pkcs8"]

[profile.release]
overflow-checks = true

[dependencies]
anyhow = "1.0.57"
base64ct = { version = "1.5.0", features = ["alloc"] }
clap = { version = "4.0.18", features = ["derive"] }
notify = "5.0.0-pre.15"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.14"
sha2 = "0.10.2"

# For features: rsa / rustcrypto
digest = { version = "0.10.3", optional = true }

# For feature: rsa
rsa = { version = "0.7.0", optional = true }
signature = { version = "1.6.4", optional = true }

# For feature: ring
pem-rfc7468 = { version = "0.6.0", features = ["std"], optional = true }
ring = { version = "0.16.20", features = ["std"], optional = true }

# For feature: rustcrypto
ecdsa = { version = "0.14.2", optional = true }
ed25519 = { version = "1.5.2", features = ["alloc", "pkcs8"], optional = true }
ed25519-dalek = { git = "https://github.com/stephank/ed25519-dalek.git", branch = "relax-zeroize", optional = true }
elliptic-curve = { version = "0.12.1", features = ["pem"], optional = true }
k256 = { version = "0.11.2", optional = true }
p256 = { version = "0.11.1", optional = true }
p384 = { version = "0.11.1", optional = true }
pkcs8 = { version = "0.9.0", features = ["std"], optional = true }

[dev-dependencies]
tempfile = "3.3.0"
